# rvxv

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
docs/: code_review.md
examples/: bf16_fma.yaml  bf16_to_fp32_convert.yaml  fp8_e4m3_dot.yaml  fused_exp.yaml  int32_reduction_sum.yaml  int4_packed_mac.yaml  int8_dot_product.yaml
scripts/: benchmark.py  e2e_spike_test.sh  validate_output.py
src/rvxv/: __init__.py  cli.py
src/rvxv/core/: __init__.py  instruction_ir.py  semantics_engine.py  spec_parser.py  type_system.py
src/rvxv/generators/: __init__.py  base.py
src/rvxv/generators/assertions/: __init__.py  assertion_gen.py  bind_gen.py  coverage_gen.py  rvfi_checker_gen.py  sva_gen.py
src/rvxv/generators/assertions/templates/: bind.sv.j2  (+3 more)
src/rvxv/generators/docs/: __init__.py  spec_doc_gen.py
src/rvxv/generators/rtl/: __init__.py  rtl_gen.py
src/rvxv/generators/spike/: __init__.py  decode_gen.py  disasm_gen.py  execute_gen.py  spike_gen.py
src/rvxv/generators/tests/: __init__.py  asm_emitter.py  corner_cases.py  directed_gen.py  random_gen.py  test_gen.py
src/rvxv/numeric/: __init__.py  bfloat16.py  block_fp.py  float_base.py  fp8_e4m3.py  fp8_e5m2.py  int4.py  mx_formats.py  rounding.py  softfloat_wrapper.py  tolerance.py
src/rvxv/presets/: __init__.py  registry.py
src/rvxv/presets/specs/: ame_outer_product.yaml  common_ai_ops.yaml  ime_option_e.yaml  vme_zvbdot.yaml
tests/: conftest.py  test_cli.py  test_e2e_spike.py  test_e2e_verilator.py  test_golden_values.py  test_real_toolchain.py  test_spike_e2e_real.py
tests/test_core/: test_spec_parser.py
tests/test_generators/: test_asm_structure.py  test_end_to_end.py  test_spike_compilable.py  test_spike_gen.py  test_sva_structure.py
tests/test_numeric/: test_bfloat16.py  test_cross_validation.py  test_fp8_e4m3.py  test_fp8_e5m2.py  test_int4.py  test_softfloat_differential.py  test_tolerance.py
(+14 files in other folders)
